# secondstate-interview

./: .gitignore  README.md
docs/: erc20.md  实现 fib 函数.md  环境准备.md
erc20-rs/: Cargo.toml
erc20-rs-ssvm-test/: README.md  test.py
erc20-rs/src/: erc20.rs  signature.rs  token.rs
ewasm-api-rs/: README.md
fib-wasm/: Cargo.toml
fib-wasm/src/: lib.rs
function-signature-rs/: Cargo.toml  README.md
function-signature-rs/src/: main.rs
simple-sqlite-host-call/: README.md  doc  doc.md  sqlite_host.c  sqlite_host.out  sqlite_host.wasm  sqlite_host.wat  test.db
